--- a/MyDigimind/app/src/main/res/values/colors.xml
+++ b/MyDigimind/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="colorPrimariDark">#018787</color>
     <color name="colorAccent">#C875BA</color>
     <color name="Gray">#A39F9F</color>
+    <color name="blue">#0741ED</color>
 </resources>
