--- a/MyDigimind/app/src/main/res/layout/fragment_dashboard.xml
+++ b/MyDigimind/app/src/main/res/layout/fragment_dashboard.xml
@@ -29,6 +29,7 @@
             android:textSize="20sp"
             android:text=""/>
         <EditText
+            android:id="@+id/et_titulo"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="@string/take_my_pill"
@@ -50,6 +51,7 @@
                     android:text="@string/monday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/monday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -62,6 +64,7 @@
                     android:text="@string/tuesday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/tuesday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -74,6 +77,7 @@
                     android:text="@string/wednesday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/wednesday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -86,6 +90,7 @@
                     android:text="@string/thursday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/thursday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -98,6 +103,7 @@
                     android:text="@string/friday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/friday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -110,6 +116,7 @@
                     android:text="@string/saturday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/saturday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
@@ -122,6 +129,7 @@
                     android:text="@string/sunday"
                     android:textSize="20sp"/>
                 <CheckBox
+                    android:id="@+id/sunday"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"/>
